<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Already \nHave an \nAccount?" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_register_hero" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/text_input_email"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/login_email"
                    style="@style/modifiedEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/text_input_pass"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/login_pass"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/resetpass"
                style="@style/parent"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginEnd="15dp"
                android:text="@string/resetpass"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/login_button"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:backgroundTint="@color/frozen_landscape"
                android:text="@string/login" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/register_login"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginEnd="15dp"
                android:text="@string/new_registration"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp">

                <TextView
                    style="@style/viewParent"
                    android:text="Admin Login"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/admin_switch"
                    style="@style/loginButton"
                    android:layout_marginTop="25dp" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        android:id="@+id/registration_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_add_img" />


</RelativeLayout>